--- a/service-web/package.json
+++ b/service-web/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "convert2graphql": "^1.0.6",
     "tachyons": "^4.9.1",
+    "vee-validate": "^2.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
