--- a/service-web/package.json
+++ b/service-web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "convert2graphql": "^1.0.6",
+    "sweetalert2": "^7.16.0",
     "tachyons": "^4.9.1",
     "vee-validate": "^2.0.5",
     "vue": "^2.5.2",
@@ -41,7 +42,7 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
+    "eslint-plugin-vue": "^4.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
