--- a/service-web/package.json
+++ b/service-web/package.json
@@ -18,6 +18,7 @@
     "vee-validate": "^2.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuejs-datepicker": "^0.9.29",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
