--- a/service-web/package.json
+++ b/service-web/package.json
@@ -15,6 +15,7 @@
     "convert2graphql": "^1.0.6",
     "sweetalert2": "^7.16.0",
     "tachyons": "^4.9.1",
+    "v-calendar": "^0.8.0",
     "vee-validate": "^2.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
