--- a/service-web/package.json
+++ b/service-web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "convert2graphql": "^1.0.6",
+    "moment": "^2.21.0",
     "sweetalert2": "^7.16.0",
     "tachyons": "^4.9.1",
     "v-calendar": "^0.8.0",
