--- a/service-api/package.json
+++ b/service-api/package.json
@@ -7,6 +7,7 @@
     "agendash": "^0.4.0",
     "async": "2.1.4",
     "babel": "^6.23.0",
+    "bcrypt-nodejs": "0.0.3",
     "cli-table": "^0.3.1",
     "cloudinary": "1.7.0",
     "dotenv": "^4.0.0",
