--- a/service-web/package.json
+++ b/service-web/package.json
@@ -24,6 +24,7 @@
     "vue-multiple-back-top": "^1.0.2",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
+    "vue-youtube-embed": "^2.1.3",
     "vuejs-datepicker": "^0.9.29",
     "vuex": "^3.0.1"
   },
