--- a/service-web/package.json
+++ b/service-web/package.json
@@ -21,6 +21,7 @@
     "v-calendar": "^0.8.0",
     "vee-validate": "^2.0.5",
     "vue": "^2.5.2",
+    "vue-blu": "^0.1.9",
     "vue-multiple-back-top": "^1.0.2",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
